--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
-/* Add application styles & imports to this file! */
+/*
+MATERIAL
+*/
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+/*
+GLOBAL FONT(S)
+*/
+* {
+  font-family: 'Roboto', sans-serif;
+}
